# asha-rulebench

./: .den-serve.json  .gitignore  .playwright-service.json  AGENTS.md  README.md  README.template.md  boundaries.json  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  template-manifest.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
rulebench-rs/: Cargo.toml  README.md
rulebench-rs/crates/rulebench-authority/: Cargo.toml
rulebench-rs/crates/rulebench-authority/src/: audit.rs  catalog.rs  catalog_types.rs  content.rs  fixtures.rs  lib.rs  model.rs  modifiers.rs  projection.rs  resolver.rs  runtime.rs  session.rs  state.rs  tests.rs  ts_emit.rs
rulebench-rs/crates/rulebench-authority/src/model/: action_resources.rs  catalog.rs  projection.rs  scenario.rs
rulebench-rs/crates/rulebench-authority/src/runtime/: automation.rs  control.rs  mod.rs
rulebench-rs/crates/rulebench-authority/src/scenarios/: mod.rs
rulebench-rs/crates/rulebench-authority/src/state/: combatant.rs
rulebench-rs/crates/rulebench-authority/src/tests/: content_diagnostics.rs  mod.rs  model_content.rs  resolver_catalog_state.rs  scenario_package.rs  session_commands.rs  session_lifecycle_turns.rs  session_options_automation.rs  session_snapshot.rs  session_status_audit.rs
rulebench-rs/crates/rulebench-bridge/: Cargo.toml
rulebench-rs/crates/rulebench-bridge/src/: content_invocation.rs  error.rs  experiment.rs  invocation.rs  lib.rs  tests.rs
rulebench-rs/crates/rulebench-codegen/: Cargo.toml
rulebench-rs/crates/rulebench-codegen/src/: lib.rs  scenario_catalog.rs  ts_emit.rs
rulebench-rs/crates/rulebench-codegen/src/combat_session/: fragments.rs  renderers.rs  scalars.rs
rulebench-rs/crates/rulebench-combat/: Cargo.toml
rulebench-rs/crates/rulebench-combat/src/: api.rs  audit.rs  lib.rs  model.rs  modifiers.rs  resolver.rs  rpg_resolver.rs  state.rs
rulebench-rs/crates/rulebench-combat/src/model/: action_resources.rs  class_build.rs  combat_flow.rs  control.rs  effects.rs  equipment.rs  movement.rs  projection.rs  reactions.rs  session.rs
rulebench-rs/crates/rulebench-combat/src/runtime/: automation.rs  control.rs  equipment.rs  finalization.rs  mod.rs  movement.rs  reactions.rs  script.rs  status.rs
rulebench-rs/crates/rulebench-combat/src/state/: combatant.rs
rulebench-rs/crates/rulebench-content/: Cargo.toml
rulebench-rs/crates/rulebench-content/src/: active_modifier.rs  authored_action.rs  authored_scenario.rs  binding.rs  canonical.rs  diagnostics.rs  diff.rs  import.rs  lib.rs  pack.rs  pack_validation.rs  rpg_content.rs  scenario.rs  scenario_binding.rs  stats.rs  storage.rs  validation.rs
rulebench-rs/crates/rulebench-content/src/diff/: tests.rs
rulebench-rs/crates/rulebench-content/src/import/: tests.rs  validation.rs
rulebench-rs/crates/rulebench-content/src/storage/: codec.rs  tests.rs
rulebench-rs/crates/rulebench-core/: Cargo.toml
rulebench-rs/crates/rulebench-core/src/: lib.rs  primitives.rs
rulebench-rs/crates/rulebench-fixtures/: Cargo.toml  README.md
rulebench-rs/crates/rulebench-fixtures/src/: capabilities.rs  catalog.rs  conformance.rs  content_import.rs  goldens.rs  lib.rs  package.rs  providers.rs  registry.rs  regression.rs  replay_review.rs
rulebench-rs/crates/rulebench-fixtures/src/scenarios/: mod.rs  skirmish.rs  turn_control.rs  veteran_hexing.rs
rulebench-rs/crates/rulebench-gameplay-module/: Cargo.toml  build.rs
rulebench-rs/crates/rulebench-gameplay-module/src/: lib.rs
rulebench-rs/crates/rulebench-product-content/: Cargo.toml  README.md
rulebench-rs/crates/rulebench-product-content/src/: capabilities.rs  catalog.rs  lib.rs  package.rs  registry.rs
rulebench-rs/crates/rulebench-product-content/src/scenarios/: skirmish.rs  turn_control.rs  veteran_hexing.rs
rulebench-rs/crates/rulebench-protocol/: Cargo.toml
rulebench-rs/crates/rulebench-protocol/src/: authored_action.rs  authored_action_binding.rs  authored_scenario.rs  authoring.rs  bridge.rs  capabilities.rs  capability_manifest.rs  content.rs  experiment.rs  lib.rs  reaction.rs  recovery.rs  replay.rs  session.rs  viewer.rs
rulebench-rs/crates/rulebench-protocol/src/live/: automation.rs  evidence.rs  mod.rs  snapshot.rs
rulebench-rs/crates/rulebench-protocol/src/typescript/: aliases.rs  interfaces.rs  live_interfaces.rs  mod.rs
rulebench-rs/crates/rulebench-replay/: Cargo.toml
rulebench-rs/crates/rulebench-replay/src/: archive.rs  archive_storage.rs  automatic_run.rs  canonical_archive.rs  comparison.rs  lib.rs  package.rs  package_validation.rs  randomness.rs  recovery.rs  review.rs  verification.rs
rulebench-rs/crates/rulebench-rpg-adapter/: Cargo.toml
rulebench-rs/crates/rulebench-rpg-adapter/src/: capabilities.rs  lib.rs
rulebench-rs/crates/rulebench-rules/: Cargo.toml
rulebench-rs/crates/rulebench-rules/src/: audit.rs  capabilities.rs  content.rs  lib.rs  model.rs  modifiers.rs  resolver.rs  state.rs
rulebench-rs/crates/rulebench-rules/src/model/: combat_flow.rs  content.rs  control.rs  core.rs  effects.rs  projection.rs  scenario.rs  session.rs  stats.rs
rulebench-rs/crates/rulebench-rules/src/runtime/: mod.rs  replay.rs  script.rs  status.rs
rulebench-rs/crates/rulebench-rules/src/state/: combatant.rs
rulebench-rs/crates/rulebench-ruleset/: Cargo.toml
rulebench-rs/crates/rulebench-ruleset/src/: lib.rs
rulebench-rs/hosts/play-host/: Cargo.toml
rulebench-rs/hosts/play-host/src/: lib.rs  main.rs
rulebench-rs/hosts/rulebench-process-host/: Cargo.toml
rulebench-rs/hosts/rulebench-process-host/src/: artifact_repository.rs  capability_artifact.rs  content_workspace.rs  http.rs  lib.rs  router.rs  server.rs  tests.rs
rulebench-rs/hosts/rulebench-process-host/src/fixtures/: authored-content-v3.json
rulebench-rs/hosts/rulebench-process-host/tests/: authored_content_v3_restart.rs
rulebench-rs/hosts/ruleset-host/: Cargo.toml
rulebench-rs/hosts/ruleset-host/src/: lib.rs  main.rs
rulebench-rs/portable-consumer-smoke/: Cargo.toml  README.md
rulebench-rs/portable-consumer-smoke/src/: main.rs
(+226 files in other folders)
