[workspace]
members = ["hosts/play-host"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
getrandom = "0.3"
rpg-compiler = { git = "https://github.com/FuzzySlipper/asha-rpg.git", rev = "ed9eb6a5ba21e346cbe34279eb05c1709f2b6bf7" }
rpg-core = { git = "https://github.com/FuzzySlipper/asha-rpg.git", rev = "ed9eb6a5ba21e346cbe34279eb05c1709f2b6bf7" }
rpg-ir = { git = "https://github.com/FuzzySlipper/asha-rpg.git", rev = "ed9eb6a5ba21e346cbe34279eb05c1709f2b6bf7" }
rpg-runtime = { git = "https://github.com/FuzzySlipper/asha-rpg.git", rev = "ed9eb6a5ba21e346cbe34279eb05c1709f2b6bf7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ts-rs = { version = "11", features = ["serde-compat"] }
