[package]
name = "rulebench-authority"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local ASHA Rulebench authority incubation crate."

[lints]
workspace = true

[dependencies]
rulebench-bridge = { path = "../rulebench-bridge" }
rulebench-codegen = { path = "../rulebench-codegen" }
rulebench-fixtures = { path = "../rulebench-fixtures" }
rulebench-rules = { path = "../rulebench-rules" }
