[package]
name = "rulebench-authority"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rulebench command entrypoints and integration test harness."

[lints]
workspace = true

[dependencies]
rulebench-codegen = { path = "../rulebench-codegen" }
rulebench-fixtures = { path = "../rulebench-fixtures" }
rulebench-combat = { path = "../rulebench-combat" }
rulebench-replay = { path = "../rulebench-replay" }
rpg-core.workspace = true
rpg-ir.workspace = true
