[package]
name = "rulebench-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime invocation boundary for ASHA Rulebench transports."

[lints]
workspace = true

[dependencies]
rulebench-protocol = { path = "../rulebench-protocol" }
rulebench-combat = { path = "../rulebench-combat" }
rulebench-content = { path = "../rulebench-content" }
rulebench-replay = { path = "../rulebench-replay" }
rpg-core.workspace = true
rpg-ir.workspace = true
