[package]
name = "rulebench-combat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authoritative combat state, resolution, and control runtime for ASHA Rulebench."

[lints]
workspace = true

[dependencies]
rulebench-gameplay-module = { path = "../rulebench-gameplay-module" }
rulebench-content = { path = "../rulebench-content" }
rulebench-core = { path = "../rulebench-core" }
rulebench-ruleset = { path = "../rulebench-ruleset" }
