[package]
name = "rulebench-combat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authoritative combat state, resolution, and control runtime for ASHA Rulebench."

[lints]
workspace = true

[dependencies]
rpg-runtime.workspace = true
rulebench-content = { path = "../rulebench-content" }
rpg-core.workspace = true
rpg-ir.workspace = true
