[package]
name = "rulebench-content"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content packs, references, validation, and diagnostics for ASHA Rulebench."

[lints]
workspace = true

[dependencies]
rpg-compiler.workspace = true
rpg-core.workspace = true
rpg-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
