[package]
name = "rulebench-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rulebench-local scenarios, fixtures, and regression packs."

[lints]
workspace = true

[dependencies]
rulebench-combat = { path = "../rulebench-combat" }
rulebench-content = { path = "../rulebench-content" }
rulebench-protocol = { path = "../rulebench-protocol" }
rulebench-replay = { path = "../rulebench-replay" }
rpg-core.workspace = true
rpg-ir.workspace = true
