[package]
name = "rulebench-gameplay-module"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Public-ASHA-backed pre-commit reaction module for ASHA Rulebench."

[lints]
workspace = true

[dependencies]
asha-gameplay-module-sdk = { git = "https://github.com/FuzzySlipper/asha-engine.git", rev = "67ce55dba602ad61e1b9ca3b0ad01a22fa4fe148", version = "^0.1" }
asha-runtime-session-composition = { git = "https://github.com/FuzzySlipper/asha-engine.git", rev = "67ce55dba602ad61e1b9ca3b0ad01a22fa4fe148", version = "^0.1" }
serde.workspace = true
serde_json.workspace = true
