[package]
name = "rulebench-product-content"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Named Rulebench product content and primary workflow samples."

[lints]
workspace = true

[dependencies]
rulebench-combat = { path = "../rulebench-combat" }
rulebench-content = { path = "../rulebench-content" }
rulebench-protocol = { path = "../rulebench-protocol" }
rulebench-replay = { path = "../rulebench-replay" }
rpg-core.workspace = true
rpg-ir.workspace = true
