[package]
name = "rulebench-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable transport protocol surfaces for ASHA Rulebench authority."

[lints]
workspace = true

[dependencies]
rulebench-rules = { path = "../rulebench-rules" }
serde.workspace = true
