[package]
name = "rulebench-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable transport protocol surfaces for ASHA Rulebench authority."

[lints]
workspace = true

[dependencies]
rulebench-rpg-adapter = { path = "../rulebench-rpg-adapter" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
