[package]
name = "rulebench-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable transport protocol surfaces for ASHA Rulebench authority."

[lints]
workspace = true

[dependencies]
rulebench-combat = { path = "../rulebench-combat" }
rulebench-content = { path = "../rulebench-content" }
rulebench-replay = { path = "../rulebench-replay" }
rpg-core.workspace = true
rpg-ir.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
