[package]
name = "rulebench-rpg-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Temporary Rulebench product adapter over pinned public RPG authority crates."

[lints]
workspace = true

[dependencies]
rulebench-combat = { path = "../rulebench-combat" }
rulebench-content = { path = "../rulebench-content" }
rpg-core.workspace = true
rulebench-replay = { path = "../rulebench-replay" }
rpg-ir.workspace = true
