[package]
name = "rulebench-play-host"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[dependencies]
getrandom.workspace = true
rpg-compiler.workspace = true
rpg-core.workspace = true
rpg-ir.workspace = true
rpg-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
ts-rs.workspace = true

[[bin]]
name = "rulebench-play-host"
path = "src/main.rs"

[[bin]]
name = "generate_play_protocol"
path = "src/bin/generate_play_protocol.rs"
