[package]
name = "rulebench-process-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local process-backed HTTP/JSON host for ASHA Rulebench."

[lints]
workspace = true

[dependencies]
rulebench-bridge = { path = "../../crates/rulebench-bridge" }
rulebench-product-content = { path = "../../crates/rulebench-product-content" }
rulebench-protocol = { path = "../../crates/rulebench-protocol" }
serde.workspace = true
serde_json.workspace = true
