[package]
name = "rulebench-ruleset-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-compiler.workspace = true
rpg-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
ts-rs.workspace = true

[[bin]]
name = "rulebench-ruleset-host"
path = "src/main.rs"

[[bin]]
name = "generate_ruleset_protocol"
path = "src/bin/generate_ruleset_protocol.rs"
